<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context="fragments.signUpUi">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/signUpUiSignUpButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="144sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/roundedbutton"
        android:elevation="8sp"
        android:fontFamily="sans-serif"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/signUpUiEmail"
        android:layout_width="330dp"
        android:layout_height="57dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:autofillHints="kk"
        android:background="@drawable/formshape"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLastName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/signUpFirstName"
        android:layout_width="330dp"
        android:layout_height="57dp"
        android:layout_marginTop="215dp"
        android:autofillHints="kk"
        android:background="@drawable/formshape"
        android:ems="10"
        android:hint="First Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/signUpLastName"
        android:layout_width="330dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:autofillHints="kk"
        android:background="@drawable/formshape"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpFirstName"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signUpUiSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/skip"
        android:textColor="#00B4B4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpUiEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpUiPassword"
            android:layout_width="330dp"
            android:layout_height="57dp"
            android:background="@drawable/formshape"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signUpUiLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="#040404"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpUiSignUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>