<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.loginui">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="144sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="162dp"
            android:background="@drawable/roundedbutton"
            android:elevation="8sp"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordField"
            tools:ignore="TextContrastCheck"
            tools:text="Login" />

        <EditText
            android:id="@+id/loginEmailField"
            android:layout_width="330dp"
            android:layout_height="57dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="kk"
            android:background="@drawable/formshape"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/loginPasswordField"
            android:layout_width="330dp"
            android:layout_height="57dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="55dp"
            android:autofillHints="kk"
            android:background="@drawable/formshape"
            android:ems="10"
            android:hint="@string/bitch_lasanga"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailField"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="370dp"
            android:background="@android:color/transparent"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>