<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.profilePageEdit">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView11"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilePageEditProfilePhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                tools:layout_editor_absoluteY="70dp" />

            <ImageView
                android:id="@+id/profilePageEditBackButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar4" />

            <TextView
                android:id="@+id/profilePageEditSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/save"
                android:textColor="#000000"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/toolbar4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/profilePageEditFirstName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView11" />

    <EditText
        android:id="@+id/profilePageEditLastName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePageEditFirstName" />

    <ImageView
        android:id="@+id/profilePageEditPhotoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintStart_toEndOf="@+id/cardView11"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>